--- a/docker-compose/docker-compose-base.yml
+++ b/docker-compose/docker-compose-base.yml
@@ -44,7 +44,6 @@ services:
       - 22000:22000/udp
       - 21027:21027/udp
     restart: unless-stopped
-
   iperf:
     container_name: iperf
     image: networkstatic/iperf3
@@ -72,3 +71,19 @@ services:
       - /proc:/host/proc:ro
       - /sys:/host/sys:ro
       - /var/run/docker.sock:/var/run/docker.sock
+
+  duplicati:
+    image: lscr.io/linuxserver/duplicati:latest
+    container_name: duplicati
+    environment:
+      - PUID=1000
+      - PGID=${PGID}
+      - TZ=${TZ}
+      - CLI_ARGS= #optional
+    volumes:
+      - ${USERDIR}/duplicati/appdata/config:/config
+      - ${USERDIR}/duplicati/backups:/backups
+      - ${USERDIR}/duplicati/source:/source
+    ports:
+      - 8200:8200
+    restart: unless-stopped
