--- a/docker-compose/docker-compose-kserver.yml
+++ b/docker-compose/docker-compose-kserver.yml
@@ -10,7 +10,7 @@ services:
       - 784:784/udp
       - 853:853/tcp
       - 3000:3000/tcp
-      - 80:80/tcp
+      - 8082:80/tcp
       - 443:443/tcp
     environment:
       - PUID=1000
@@ -29,12 +29,21 @@ services:
     restart: unless-stopped
     volumes:
       - ${USERDIR}/vaultwarden/data/:/data/
+
     environment:
+      - WEBSOCKET_ENABLED=true
+      - ROCKET_PORT=8001
+      - SIGNUPS_ALLOWED=true
+      - SIGNUPS_VERIFY=false
+      - INVITATIONS_ALLOWED=false
+      - ADMIN_TOKEN=113e78f3faca4aefb078ec72063d1229
+      - SHOW_PASSWORD_HINT=false
       - PUID=1000
       - PGID=${PGID}
       - TZ=${TZ}
     ports:
-      - 1080:80
+      - 3012:3012
+      - 8001:8001
 
   # vaultwarden-backup:
   #   image: ttionya/vaultwarden-backup:latest
