--- a/docker-compose/docker-compose-base.yml
+++ b/docker-compose/docker-compose-base.yml
@@ -9,7 +9,7 @@ services:
       - PGID=${PGID}
       - TZ=${TZ}
     volumes:
-      - ${USERDIR}/nginx/nginx.conf:/etc/nginx/nginx.conf
+      - ${USERDIR}/nginx:/etc/nginx
     ports:
       - 80:80
 
