--- a/docker-compose/docker-compose-kserver.yml
+++ b/docker-compose/docker-compose-kserver.yml
@@ -29,10 +29,10 @@ services:
     restart: unless-stopped
     volumes:
       - ${USERDIR}/vaultwarden/data/:/data/
-
     environment:
       - WEBSOCKET_ENABLED=true
-      - ROCKET_PORT=8001
+      - ROCKET_PORT=80
+      - ROCKET_TLS=0
       - SIGNUPS_ALLOWED=true
       - SIGNUPS_VERIFY=false
       - INVITATIONS_ALLOWED=false
@@ -43,7 +43,7 @@ services:
       - TZ=${TZ}
     ports:
       - 3012:3012
-      - 8001:8001
+      - 80:80
 
   # vaultwarden-backup:
   #   image: ttionya/vaultwarden-backup:latest
