--- a/docker-compose/docker-compose_prism.yml
+++ b/docker-compose/docker-compose_prism.yml
@@ -34,6 +34,7 @@ services:
     ## If the service gets stuck in a restart loop, this points to a memory, filesystem, network, or database issue:
     ## https://docs.photoprism.app/getting-started/troubleshooting/#fatal-server-errors
     # restart: unless-stopped
+    container_name: photoprism
     stop_grace_period: 10s
     depends_on:
       - mariadb
@@ -112,10 +113,11 @@ services:
 
   ## Database Server (recommended)
   ## see https://docs.photoprism.app/getting-started/faq/#should-i-use-sqlite-mariadb-or-mysql
-  mariadb:
+  ppmariadb:
     image: mariadb:11
     ## If MariaDB gets stuck in a restart loop, this points to a memory or filesystem issue:
     ## https://docs.photoprism.app/getting-started/troubleshooting/#fatal-server-errors
+    container_name: ppmariadb
     restart: unless-stopped
     stop_grace_period: 5s
     security_opt: # see https://github.com/MariaDB/mariadb-docker/issues/434#issuecomment-1136151239
