--- a/docker-compose/docker-compose_prism.yml
+++ b/docker-compose/docker-compose_prism.yml
@@ -37,7 +37,7 @@ services:
     container_name: photoprism
     stop_grace_period: 10s
     depends_on:
-      - mariadb
+      - ppmariadb
     security_opt:
       - seccomp:unconfined
       - apparmor:unconfined
