--- a/docker-compose/docker-compose-base.yml
+++ b/docker-compose/docker-compose-base.yml
@@ -10,17 +10,10 @@ services:
       - TZ=${TZ}
     volumes:
       - ${USERDIR}/nginx/vaultwarden.conf:/etc/nginx/conf.d/default.conf:ro
-      - ${USERDIR}/certbot/www:/var/www/certbot/:ro
-      - ${USERDIR}/certbot/conf/:/etc/nginx/ssl/:ro
+      - ${USERDIR}/nginx/conf/:/etc/nginx/ssl/:ro
     ports:
       - 80:80
       - 443:443
-  certbot:
-    image: certbot/certbot:latest
-    container_name: certbot
-    volumes:
-      - ${USERDIR}/certbot/www/:/var/www/certbot/:rw
-      - ${USERDIR}/certbot/conf/:/etc/letsencrypt/:rw
 
   homepage:
     image: ghcr.io/gethomepage/homepage:latest
