--- a/docker-compose/docker-compose-base.yml
+++ b/docker-compose/docker-compose-base.yml
@@ -11,6 +11,8 @@ services:
     volumes:
       - ${USERDIR}/nginx/vaultwarden.conf:/etc/nginx/conf.d/default.conf:ro
       - ${USERDIR}/nginx/cert/:/etc/nginx/ssl/:ro
+      - ${USERDIR}/nginx/homepage.conf:/etc/nginx/sites-available/:ro
+
     ports:
       - 80:80
       - 443:443
