--- a/docker-compose/docker-compose_homeassistant.yml
+++ b/docker-compose/docker-compose_homeassistant.yml
@@ -8,12 +8,16 @@ services:
       # Local path where your home assistant config will be stored
       - ${USERDIR}/home-assistant:/config
       - /etc/localtime:/etc/localtime:ro
+    ports:
+      - 8123:8123 #optional
     restart: unless-stopped
     privileged: true
+    # devices:
+    #   # - /path/to/device:/path/to/device #optional
     depends_on:
       - hamariadb # MariaDB is optional (only if you would like to use a different database for HA).
       # - zigbee2mqtt  # zigbee2mqtt is optional (only if you want to add Zigbee devices and have a zigbee sniffer attached).
-      - eclipse-mosquitto # aka mosquitto-mqtt is optional (only if you want to add Zigbee devices and have a zigbee sniffer attached).
+      # - eclipse-mosquitto # aka mosquitto-mqtt is optional (only if you want to add Zigbee devices and have a zigbee sniffer attached).
       - nodered
 
   # MariaDb
@@ -31,28 +35,28 @@ services:
       # Local path where the database will be stored.
       - ${USERDIR}/hamariadb:/var/lib/mysql
 
-  # eclipse-mosquitto (MQTT broker)
-  eclipse-mosquitto:
-    container_name: eclipse-mosquitto
-    image: eclipse-mosquitto:latest
-    restart: unless-stopped
-    volumes:
-      - ${USERDIR}/mosquitto/mosquitto.conf:/mosquitto/config/mosquitto.conf
-
-  # nodered
-  nodered:
-    container_name: nodered
-    image: nodered/node-red
-    ports:
-      - "1880:1880"
-    volumes:
-      - ${USERDIR}/nodered:/data
-    environment:
-      - PUID=1000
-      - PGID=${PGID}
-      - TZ=${TZ}
-    restart: unless-stopped
-
+  # # eclipse-mosquitto (MQTT broker)
+  # eclipse-mosquitto:
+  #   container_name: eclipse-mosquitto
+  #   image: eclipse-mosquitto:latest
+  #   restart: unless-stopped
+  #   volumes:
+  #     - ${USERDIR}/mosquitto/mosquitto.conf:/mosquitto/config/mosquitto.conf
+  #
+  # # nodered
+  # nodered:
+  #   container_name: nodered
+  #   image: nodered/node-red
+  #   ports:
+  #     - "1880:1880"
+  #   volumes:
+  #     - ${USERDIR}/nodered:/data
+  #   environment:
+  #     - PUID=1000
+  #     - PGID=${PGID}
+  #     - TZ=${TZ}
+  #   restart: unless-stopped
+  #
 
   # # zigbee2mqtt
   # zigbee2mqtt:
