--- a/docker-compose/docker-compose_immich.yml
+++ b/docker-compose/docker-compose_immich.yml
@@ -14,7 +14,7 @@ services:
     image: ghcr.io/immich-app/immich-server:${IMMICH_VERSION:-release}
     command: ['start.sh', 'immich']
     volumes:
-      - ${UPLOAD_LOCATION}:/usr/src/app/upload
+      - ${USERDIR}/immich:/usr/src/app/upload
       - /etc/localtime:/etc/localtime:ro
     env_file:
       - .env
@@ -33,7 +33,7 @@ services:
     #   service: cpu # set to one of [nvenc, quicksync, rkmpp, vaapi, vaapi-wsl] for accelerated transcoding
     command: ['start.sh', 'microservices']
     volumes:
-      - ${UPLOAD_LOCATION}:/usr/src/app/upload
+      -f:/usr/src/app/upload
       - /etc/localtime:/etc/localtime:ro
     env_file:
       - .env
@@ -56,20 +56,20 @@ services:
       - .env
     restart: always
 
-  redis:
+  immich_redis:
     container_name: immich_redis
     image: registry.hub.docker.com/library/redis:6.2-alpine@sha256:51d6c56749a4243096327e3fb964a48ed92254357108449cb6e23999c37773c5
     restart: always
 
-  database:
+  immich_postgres:
     container_name: immich_postgres
     image: registry.hub.docker.com/tensorchord/pgvecto-rs:pg14-v0.2.0@sha256:90724186f0a3517cf6914295b5ab410db9ce23190a2d9d0b9dd6463e3fa298f0
     environment:
-      POSTGRES_PASSWORD: ${DB_PASSWORD}
-      POSTGRES_USER: ${DB_USERNAME}
-      POSTGRES_DB: ${DB_DATABASE_NAME}
+      POSTGRES_PASSWORD: immich
+      POSTGRES_USER: immich
+      POSTGRES_DB: immich
     volumes:
-      - ${DB_DATA_LOCATION}:/var/lib/postgresql/data
+      -  ${USERDIR}/immich:/var/lib/postgresql/data
     restart: always
 
 volumes:
