--- a/docker-compose/docker-compose_immich.yml
+++ b/docker-compose/docker-compose_immich.yml
@@ -49,7 +49,7 @@ services:
     #   file: hwaccel.ml.yml
     #   service: cpu # set to one of [armnn, cuda, openvino, openvino-wsl] for accelerated inference - use the `-wsl` version for WSL2 where applicable
     volumes:
-      - model-cache:/cache
+      - ${USERDIR}/immich/model-cache:/cache
     env_file:
       - .env
     restart: always
@@ -67,9 +67,9 @@ services:
       POSTGRES_USER: immich
       POSTGRES_DB: immich
     volumes:
-      -  ${USERDIR}/immich:/var/lib/postgresql/data
+      -  ${USERDIR}/immich/pgdata:/var/lib/postgresql/data
     restart: always
 
 volumes:
-  pgdata:
-  model-cache:
+  pgdata: ${USERDIR}/immich/pgdata
+  model-cache: ${USERDIR}/immich/model-cache
