--- a/docker-compose/docker-compose_immich.yml
+++ b/docker-compose/docker-compose_immich.yml
@@ -31,13 +31,13 @@ services:
     #   service: cpu # set to one of [nvenc, quicksync, rkmpp, vaapi, vaapi-wsl] for accelerated transcoding
     command: ['start.sh', 'microservices']
     volumes:
-      -f:/usr/src/app/upload
+      - ${USERDIR}/immich/upload:/usr/src/app/upload
       - /etc/localtime:/etc/localtime:ro
     env_file:
       - .env
     depends_on:
-      - redis
-      - database
+      - immich_redis
+      - immich_postgres
     restart: always
 
   immich-machine-learning:
@@ -70,6 +70,6 @@ services:
       -  ${USERDIR}/immich/pgdata:/var/lib/postgresql/data
     restart: always
 
-# volumes:
-#   pgdata: ${USERDIR}/immich/pgdata
-#   model-cache: ${USERDIR}/immich/model-cache
+volumes:
+  pgdata: ${USERDIR}/immich/pgdata
+  model-cache: ${USERDIR}/immich/model-cache
