--- a/docker-compose/.env
+++ b/docker-compose/.env
@@ -3,3 +3,23 @@ MYSQL_ROOT_PASSWORD=password
 HA_MYSQL_PASSWORD=password
 VSCODE_PASSWORD=password
 ZIGBEE_ADAPTER_TTY=/dev/ttyACM0
+
+
+
+
+UPLOAD_LOCATION=./library
+
+# The Immich version to use. You can pin this to a specific version like "v1.71.0"
+IMMICH_VERSION=release
+
+# Connection secret for postgres. You should change it to a random password
+DB_PASSWORD=immich
+
+# The values below this line do not need to be changed
+###################################################################################
+DB_HOSTNAME=immich_postgres
+DB_USERNAME=immich
+DB_DATABASE_NAME=immich
+DB_DATA_LOCATION=./postgres
+
+REDIS_HOSTNAME=immich_redis
