--- a/docker-compose/docker-compose-base.yml
+++ b/docker-compose/docker-compose-base.yml
@@ -30,6 +30,7 @@ services:
       - 3000:3000
     volumes:
       - ${USERDIR}/homepage/config:/app/config
+      - ${USERDIR}/homepage/public:/app/public
       - /var/run/docker.sock:/var/run/docker.sock
   dozzle:
     container_name: dozzle
