--- a/docker-compose/docker-compose-base.yml
+++ b/docker-compose/docker-compose-base.yml
@@ -1,26 +1,40 @@
 version: "3.3"
 services:
-  nginx:
-    image: nginx
-    container_name: nginx
+  nginxpm:
+    image: 'docker.io/jc21/nginx-proxy-manager:latest'
+    container_name: nginxpm
     restart: unless-stopped
-    environment:
-      - PUID=${PUID}
-      - PGID=${PGID}
-      - TZ=${TZ}
-    volumes:
-      - ${USERDIR}/nginx/vaultwarden.conf:/etc/nginx/conf.d/default.conf:ro
-      - ${USERDIR}/nginx/cert/:/etc/nginx/ssl/:ro
-      - ${USERDIR}/nginx/homepage.conf:/etc/nginx/sites-available/:ro
-
     ports:
-      - 80:80
-      - 443:443
-      - 8443:8443
-      - 8444:8444
-      - 8445:8445
-      - 8446:8446
-      - 8447:8447
+      - '80:80'
+      - '81:81'
+      - '443:443'
+      - '8443:8443'
+      - '8444:8444'
+      - '8445:8445'
+    volumes:
+      - ${USERDIR}/nginxpm/data:/data
+      - ${USERDIR}/nginxpm/letsencrypt:/etc/letsencrypt
+        #nginx:
+    #image: nginx
+      #container_name: nginx
+      #restart: unless-stopped
+      #environment:
+      #- PUID=${PUID}
+        #- PGID=${PGID}
+        #- TZ=${TZ}
+        #    volumes:
+        #- ${USERDIR}/nginx/vaultwarden.conf:/etc/nginx/conf.d/default.conf:ro
+        #- ${USERDIR}/nginx/cert/:/etc/nginx/ssl/:ro
+        #- ${USERDIR}/nginx/homepage.conf:/etc/nginx/sites-available/:ro
+
+    #ports:
+    #- 80:80
+    #- 443:443
+    #- 8443:8443
+    #- 8444:8444
+    # - 8445:8445
+    # - 8446:8446
+    # - 8447:8447
   homepage:
     image: ghcr.io/gethomepage/homepage:latest
     hostname: homepage
@@ -58,8 +72,8 @@ services:
       - TZ=${TZ}
     volumes:
       - ${USERDIR}/syncthing/config:/config
-      - ${USERDIR}/data1:/data1
-      - ${USERDIR}/data2:/data2
+      - ${USERDIR}/syncthing/data1:/data1
+      - ${USERDIR}/syncthing/data2:/data2
     ports:
       - 8384:8384
       - 22000:22000/tcp
