--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -71,7 +71,6 @@ services:
       - "WEBUI_SECRET_KEY="
     extra_hosts:
       - host.docker.internal:host-gateway
-    restart: unless-stopped
     networks:
       - app_network
 
@@ -141,6 +140,7 @@ services:
     # ports:
     #   - "2283:2283"
     depends_on:
+      - immich-machine-learning
       - redis
       - postgres
     restart: unless-stopped
@@ -321,10 +321,10 @@ services:
       - TZ=Australia/Melbourne
       - OOKLA_EULA_GDPR=true
     logging:
-        driver: "json-file"
-        options:
-            max-file: "10"
-            max-size: "200k"
+      driver: "json-file"
+      options:
+        max-file: "10"
+        max-size: "200k"
     volumes:
       - /srv/data/speedtest_data:/config
     # ports:
