--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -289,7 +289,7 @@ services:
       - /var/run/docker.sock:/var/run/docker.sock
     environment:
       - DOCKER_HOST=http://docker-socket-proxy:2375 # Use host IP for docker-socket-proxy
-      - DOZZLE_REMOTE_AGENT=http://piserver:7007
+      - DOZZLE_REMOTE_AGENT=piserver:7007
     networks:
       - app_network
     depends_on:
