--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -288,8 +288,9 @@ services:
     volumes:
       - /var/run/docker.sock:/var/run/docker.sock
     environment:
-      - DOCKER_HOST=http://docker-socket-proxy:2375 # Use host IP for docker-socket-proxy
-      - DOZZLE_REMOTE_AGENT=piserver:7007
+      - DOCKER_HOST=http://docker-socket-proxy:2375
+      - DOZZLE_REMOTE_HOST: tcp://kserver:2376 # Use host IP for docker-socket-proxy
+      # - DOZZLE_REMOTE_AGENT=piserver:7007
     networks:
       - app_network
     depends_on:
