--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -290,7 +290,7 @@ services:
     environment:
       - DOCKER_HOST=http://docker-socket-proxy:2375
       # - DOZZLE_REMOTE_HOST=tcp://piserver:2376 #
-      - DOZZLE_AGENT_HOSTS=192.168.50.200:7007
+      - DOZZLE_REMOTE_AGENT=192.168.50.200:7007
       # - DOZZLE_REMOTE_AGENT=piserver:7007
     networks:
       - app_network
