--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -289,7 +289,7 @@ services:
       - /var/run/docker.sock:/var/run/docker.sock
     environment:
       - DOCKER_HOST=http://docker-socket-proxy:2375
-      - DOZZLE_REMOTE_AGENT=tcp://piserver:2375
+      - DOZZLE_REMOTE_HOST=tcp://piserver:2375
     networks:
       - app_network
     depends_on:
