Add homelab-bootstrap as submodule

--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "homelab-bootstrap"]
 	path = homelab-bootstrap
 	url = https://github.com/hyperveloce/homelab-bootstrap.git
+[submodule "bootstrap"]
+	path = bootstrap
+	url = https://github.com/hyperveloce/homelab-bootstrap.git
